<resources>
    <string name="app_name">Movie Tracker</string>

    <!-- Main Activity -->
    <string name="main_activity_title">Movie Tracker</string>
    <string name="register_movie_btn_text">Register Movie</string>
    <string name="display_movies_btn_text">Display Movies</string>
    <string name="favourites_btn_text">Favorites</string>
    <string name="edit_movies_btn_text">Edit Movies</string>
    <string name="search_btn_text">Search</string>
    <string name="ratings_btn_text">Ratings</string>

    <!-- Register Movie -->
    <string name="register_movie_title_textView">Register Movie</string>
    <string name="title_textView">Title of the Movie</string>
    <string name="year_textView">Year of the Movie</string>
    <string name="director_textView">Director of the Movie</string>
    <string name="cast_textView">List of Actors/ Actress</string>
    <string name="ratings_textView">Ratings</string>
    <string name="reviews_textView">Reviews</string>

    <string name="title_hint">Title</string>
    <string name="director_hint">Director</string>
    <string name="year_hint">Year</string>
    <string name="cast_hint">Cast of the Movie</string>
    <string name="ratings_hint">Ratings out of 10</string>
    <string name="review_hint">Review</string>

    <string name="save_btnLabel">Save</string>
    <string name="reset_btnLabel">Reset</string>

    <string name="movie_indexLabel">Movie - #</string>
    <string name="movie_index">001</string>

    <!--  Display Movies  -->
    <string name="display_movies_title_textView">Display Movies</string>
    <string name="add_btnLabel">Add To Favorites</string>


    <!--  Favorite Movies  -->
    <string name="favorites_movies_title">Favorites Movies</string>
    <string name="remove_btnLabel">Remove Favorites</string>
    <string name="disfavor_checkBoxLabel">Disfavor</string>
    <string name="disfavored_checkBoxLabel">Disfavored</string>
    <string name="favored_checkBoxLabel">Favored</string>
    <string name="to_be_removed_checkBoxLabel">To be Removed</string>
    <string name="edit_movie_data_title">Edit Movie Data</string>
    <string name="update_btnLabel">Update</string>

    <!--  Search Movies  -->
    <string name="search_movies_titles">Search Movies</string>
    <string name="search_editText_hint">Search</string>
    <string name="search_btnLabel">Lookup</string>
    <string name="null_search_results">No Search Results</string>

    <!--  Edit Movies  -->
    <string name="edit_movie_title">Edit Movie</string>
    <string name="movie_category_textView">Movie Category</string>
    <string name="fav_movie_textView">Favorite Movie</string>
    <string name="not_fav_movie_textView">Not a Favorite Movie</string>
    <string name="alphabetical_textView_des">*Movies are sorted Alphabetically</string>
    <string name="undo_btnLabel">Undo</string>

    <!--  Fetch Data & Ratings  -->
    <string name="MY_API_KEY">k_q8ltbyxn</string>
    <!--    <string name="MY_API_KEY">k_ocasspr5</string>-->

    <string name="ratings_title">Ratings</string>
    <string name="imdb_data_textView_title">IMDB Data</string>
    <string name="movie_poster_content_des">movie poster</string>


</resources>