<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2E2E2E"
    android:id="@+id/edit_movie"
    tools:context=".EditMovie">

    <TextView
        android:id="@+id/activity_title"
        style="@style/titleHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_movie_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="120dp"
        android:text="@string/title_textView"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_title" />

    <TextView
        android:id="@+id/year_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/year_textView"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_textView" />

    <TextView
        android:id="@+id/director_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/director_textView"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/year_textView" />

    <TextView
        android:id="@+id/cast_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/cast_textView"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/director_textView" />

    <TextView
        android:id="@+id/ratings_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="76dp"
        android:text="@string/ratings_textView"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cast_textView" />

    <TextView
        android:id="@+id/review_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/reviews_textView"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratings_textView" />

    <TextView
        android:id="@+id/review_textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="68dp"
        android:text="@string/movie_category_textView"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/review_textView" />

    <EditText
        android:id="@+id/search_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:background="@drawable/rounded_text"
        android:ems="10"
        android:hint="@string/title_hint"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#80FFFFFF"
        app:layout_constraintBaseline_toBaselineOf="@+id/title_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/title_textView" />

    <EditText
        android:id="@+id/year_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:background="@drawable/rounded_text"
        android:ems="10"
        android:hint="@string/year_hint"
        android:inputType="number"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#80FFFFFF"
        app:layout_constraintBaseline_toBaselineOf="@+id/year_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/title_textView" />

    <EditText
        android:id="@+id/director_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:background="@drawable/rounded_text"
        android:ems="10"
        android:hint="@string/director_hint"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#80FFFFFF"
        app:layout_constraintBaseline_toBaselineOf="@+id/director_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/title_textView" />

    <EditText
        android:id="@+id/cast_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/cast_hint"
        android:background="@drawable/rounded_text"
        android:padding="10dp"
        android:lines="3"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:textColor="#FFFFFF"
        android:textColorHint="#80FFFFFF"
        app:layout_constraintBaseline_toBaselineOf="@+id/cast_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/title_textView"
        tools:ignore="LabelFor" />

    <RatingBar
        android:id="@+id/ratingBar"
        style="@style/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="20dp"
        android:isIndicator="false"
        android:clickable="true"
        android:focusable="true"
        android:numStars="10"
        android:rating="3"
        android:scaleX=".575"
        android:scaleY=".575"
        android:transformPivotX="0dp"
        android:transformPivotY="0dp"
        app:layout_constraintStart_toEndOf="@+id/ratings_textView"
        app:layout_constraintTop_toBottomOf="@+id/cast_input" />

    <EditText
        android:id="@+id/reviews_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:hint="@string/review_hint"
        android:background="@drawable/rounded_text"
        android:padding="10dp"
        android:ems="10"
        android:lines="3"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:textColor="#FFFFFF"
        android:textColorHint="#80FFFFFF"
        app:layout_constraintBaseline_toBaselineOf="@+id/review_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/title_textView"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/search_movie_btn"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_ripple_effect"
        android:text="@string/update_btnLabel"
        android:onClick="saveMovie"
        android:textColor="#2E2E2E"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/review_textView" />

    <Button
        android:id="@+id/reset_btn"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="42dp"
        android:background="@drawable/button_ripple_effect"
        android:text="@string/undo_btnLabel"
        android:onClick="undoData"
        android:textColor="#2E2E2E"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/review_textView" />

    <TextView
        android:id="@+id/movie_index_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:layout_marginTop="32dp"
        android:text="@string/movie_indexLabel"
        android:textColor="#FFC542"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_title" />

    <TextView
        android:id="@+id/movie_index"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/movie_index"
        android:textColor="#FFC542"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/movie_index_label"
        app:layout_constraintTop_toBottomOf="@+id/activity_title" />

    <CheckBox
        android:id="@+id/isFav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:text="Favorite Movie"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/review_textView2"
        app:layout_constraintTop_toBottomOf="@+id/reviews_input" />

</androidx.constraintlayout.widget.ConstraintLayout>