<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#2E2E2E"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/register_movie_btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="292dp"
        android:background="@drawable/button_ripple_effect"
        android:text="@string/register_movie_btn_text"
        android:textColor="#2E2E2E"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/favorites_btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_ripple_effect"
        android:text="@string/favourites_btn_text"
        android:textColor="#2E2E2E"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_movies_btn" />

    <Button
        android:id="@+id/favorites_btn2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_ripple_effect"
        android:text="@string/search_btn_text"
        android:textColor="#2E2E2E"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favorites_btn" />

    <Button
        android:id="@+id/favorites_btn3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_ripple_effect"
        android:text="@string/ratings_btn_text"
        android:textColor="#2E2E2E"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favorites_btn2" />

    <Button
        android:id="@+id/display_movies_btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_ripple_effect"
        android:text="@string/display_movies_btn_text"
        android:textColor="#2E2E2E"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_movie_btn" />

    <Button
        android:id="@+id/edit_movies_btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_ripple_effect"
        android:text="@string/edit_movies_btn_text"
        android:textColor="#2E2E2E"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display_movies_btn" />

    <ImageView
        android:id="@+id/movie_reel_icon"
        android:layout_width="94dp"
        android:layout_height="107dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="80dp"
        android:contentDescription="movie_reel_text"
        app:layout_constraintBottom_toTopOf="@+id/register_movie_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/main_icon" />

    <TextView
        android:id="@+id/activity_main_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="56dp"
        android:text="@string/main_activity_title"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/register_movie_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>