<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#2E2E2E"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/display_movie"
    tools:context=".DisplayMovies">

    <TextView
        android:id="@+id/activity_title"
        style="@style/titleHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/display_movies_title_textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestScrollView"
        android:layout_width="0dp"
        android:layout_height="450dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_title"
        app:layout_constraintVertical_bias="0.274" >

        <LinearLayout
            android:id="@+id/display_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Fav    Movie Name"
                android:layout_marginStart="16dp"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ListView
                android:id="@+id/list_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:layout_marginTop="5dp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/search_movie_btn"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_ripple_effect"
        android:onClick="AddToFav"
        android:text="@string/add_btnLabel"
        android:textColor="#2E2E2E"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nestScrollView"
        app:layout_constraintVertical_bias="0.375" />

    <Button
        android:id="@+id/reset_btn"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@drawable/button_ripple_effect"
        android:text="@string/reset_btnLabel"
        android:onClick="resetStatus"
        android:textColor="#2E2E2E"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nestScrollView"
        app:layout_constraintVertical_bias="0.375" />

    <CheckBox
        android:id="@+id/favored_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="184dp"
        android:checked="true"
        android:text="@string/favored_checkBoxLabel"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/nestScrollView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_title"
        app:layout_constraintVertical_bias="0.555" />

    <CheckBox
        android:id="@+id/disfavored_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:checked="false"
        android:enabled="false"
        android:text="@string/disfavored_checkBoxLabel"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/nestScrollView"
        app:layout_constraintStart_toEndOf="@+id/favored_checkBox"
        app:layout_constraintTop_toBottomOf="@+id/activity_title"
        app:layout_constraintVertical_bias="0.555" />

</androidx.constraintlayout.widget.ConstraintLayout>